# Sovereign_Mohawk_Oncology_Global

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  app.js  index.html  manifesto.html  styles.css
.github/: CODEOWNERS  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_report.md
.github/workflows/: beta-artifacts.yml  ci.yml  pages.yml  release-drafter.yml
docs/: GENESIS_MANIFESTO.md  VERIFIED_RUNTIME_ROADMAP.md
docs/beta/: BETA_RELEASE.md  COMPLIANCE_EVIDENCE.md  RELEASE_READINESS_CHECKLIST.md  REPO_METADATA.md
docs/beta/artifacts/: build_timestamp_utc.txt  git_commit.txt  (+3 more)
flower_security_wrapper/: .coverage  README.md  adversarial_exercise.py  coverage.xml  example_server.py  junit.xml  policy.rare_disease.json  pyproject.toml  requirements-dev.txt  security_audit.jsonl
flower_security_wrapper/security_wrapper/: __init__.py  attestation.py  audit.py  checks.py  constraint_profile.py  crypto.py  flwr_integration.py  governance_contract.py  nonce_store.py  poisoning.py  policy.py  rejection_codes.py  replay.py  semantic.py  siem.py  wal_ledger.py  wrapper.py
flower_security_wrapper/sovereign_mohawk_flower_security_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flower_security_wrapper/tests/: test_attestation.py  test_checks.py  test_crypto.py  test_governance_contract.py  test_nonce_store.py  test_pentest_simulation.py  test_poisoning.py  test_policy.py  test_semantic_replay.py  test_siem.py  test_wal_ledger.py  test_wrapper_benchmarks.py
scripts/: capture_beta_artifacts.sh
