[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-mohawk-flower-security-wrapper"
version = "0.1.0b1"
description = "Security wrapper for Flower federated training with governance gates, slashing, attestation, and audit controls."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Sovereign MOHAWK" }
]
keywords = ["federated-learning", "flower", "security", "hipaa", "gdpr", "attestation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
postgres = ["psycopg[binary]>=3.1.0"]
crypto = ["cryptography>=42.0.0"]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "build>=1.2.0",
  "twine>=5.1.0",
  "ruff>=0.5.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["security_wrapper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
